results/440e74536c3b2b5fc72c13626df9c4e3/err_code.txt
  File "./pyfile.py", line 18
    runitem = MCMCWrapper(emcee, m,c, x, , sigma_gauss, [object Object], 1000, 1000, 100, 2, {errval}, fanatapan@yahoo.co.uk, 440e74536c3b2b5fc72c13626df9c4e3, {modelStrings},   argslist = (x, 0.65, data)
                                         ^
SyntaxError: invalid syntax
